--- a/practice5/docker-compose.yaml
+++ b/practice5/docker-compose.yaml
@@ -1,35 +1,9 @@
 version: '3.8'
 
 services:
-  minio-2:
-    image: minio/minio
-    hostname: minio2
-    ports:
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin123
-    command: server /data --address ":9001"
-    depends_on:
-      - file-server-instance0
-      - file-server-instance1
-      - file-server-instance2
-
-  minio:
-    image: minio/minio
-    hostname: minio1
-    ports:
-      - "9000:9000"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin123
-    command: server /data
-    depends_on:
-      - file-server-instance0
-      - file-server-instance1
-      - file-server-instance2
-
   file-server-instance0:
+    networks:
+      - my-network
     build:
       context: ./practice5-s3-minio
       dockerfile: Dockerfile
@@ -37,6 +11,8 @@ services:
       - "8080:8080"
 
   file-server-instance1:
+    networks:
+      - my-network
     build:
       context: ./practice5-s3-minio
       dockerfile: Dockerfile
@@ -44,6 +20,8 @@ services:
       - "8081:8080"
 
   file-server-instance2:
+    networks:
+      - my-network
     build:
       context: ./practice5-s3-minio
       dockerfile: Dockerfile
@@ -51,6 +29,8 @@ services:
       - "8082:8080"
 
   nginx:
+    networks:
+      - my-network
     build:
       context: ./practice5-nginx
       dockerfile: Dockerfile
@@ -62,5 +42,5 @@ services:
       - file-server-instance0
       - file-server-instance1
       - file-server-instance2
-      - minio
-      - minio-2
+networks:
+  my-network:
