--- a/practice5/practice5-nginx/nginx.conf
+++ b/practice5/practice5-nginx/nginx.conf
@@ -1,10 +1,10 @@
 events {}
 
 http {
-    upstream file_server {
+    upstream fileserver {
         server file-server-instance0:8080;
-        server file-server-instance1:8081;
-        server file-server-instance2:8082;
+#         server file-server-instance1:8081;
+#         server file-server-instance2:8082;
 #         server localhost:8080;
 #         server localhost:8081;
 #         server localhost:8082;
@@ -13,12 +13,8 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://file_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        location ^~ / {
+            proxy_pass http://fileserver;
         }
     }
 }
