--- a/practice5/docker-compose.yaml
+++ b/practice5/docker-compose.yaml
@@ -1,24 +1,27 @@
 services:
-  file-server-instance0:
+  file-server-instance00:
+    container_name: file-server-instance0
     build:
       context: ./practice5-s3-minio
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
 
-  file-server-instance1:
-    build:
-      context: ./practice5-s3-minio
-      dockerfile: Dockerfile
-    ports:
-      - "8081:8080"
-
-  file-server-instance2:
-    build:
-      context: ./practice5-s3-minio
-      dockerfile: Dockerfile
-    ports:
-      - "8082:8080"
+#  file-server-instance01:
+#    container_name: file-server-instance1
+#    build:
+#      context: ./practice5-s3-minio
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8081:8080"
+#
+#  file-server-instance02:
+#    container_name: file-server-instance2
+#    build:
+#      context: ./practice5-s3-minio
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8082:8080"
 
   nginx:
     build:
@@ -29,6 +32,6 @@ services:
     volumes:
       - ./practice5-nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - file-server-instance0
-      - file-server-instance1
-      - file-server-instance2
+      - file-server-instance00
+#      - file-server-instance01
+#      - file-server-instance02
