--- a/cloud-configs/user-service.yaml
+++ b/cloud-configs/user-service.yaml
@@ -1,2 +1,12 @@
 server.port: 8080
 eureka.client.service-url.default-zone: http://localhost:8761/eureka/
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: create
+
