--- a/cloud-configs/user-role-service.yaml
+++ b/cloud-configs/user-role-service.yaml
@@ -1,4 +1,4 @@
-server.port: 8080
+server.port: 8082
 eureka.client.service-url.default-zone: http://localhost:8761/eureka/
 spring:
   datasource:
@@ -9,6 +9,4 @@ spring:
     hibernate:
       ddl-auto: create
 
-user:
-  role.service.url: http://localhost:8082
-  fullname.service.url: http://localhost:8081
+user.service.url: http://localhost:8080
