--- a/practice5/practice5-nginx/nginx.conf
+++ b/practice5/practice5-nginx/nginx.conf
@@ -3,11 +3,8 @@ events {}
 http {
     upstream fileserver {
         server file-server-instance0:8080;
-#         server file-server-instance1:8081;
-#         server file-server-instance2:8082;
-#         server localhost:8080;
-#         server localhost:8081;
-#         server localhost:8082;
+         server file-server-instance1:8081;
+         server file-server-instance2:8082;
     }
 
     server {
