--- a/cloud-configs/api-gateway.yaml
+++ b/cloud-configs/api-gateway.yaml
@@ -2,7 +2,7 @@ server.port: 80
 
 spring.cloud.gateway.routes:
   - id: user-service
-    uri: http://localhost:9000
+    uri: http://load-balancer:9000
     predicates:
       - Path=/api/users/**
 
