--- a/cloud-configs/load-balancer.yaml
+++ b/cloud-configs/load-balancer.yaml
@@ -3,8 +3,8 @@ server.port: 9000
 spring.cloud.loadbalancer.clients:
   user-service:
     instances:
-      - uri: http://localhost:8080
+      - uri: http://user-service:8080
 #            - uri: http://localhost:8082
 #            - uri: http://localhost:8083
 
-eureka.client.service-url.default-zone: http://localhost:8761/eureka/
+eureka.client.service-url.default-zone: http://service-discovery:8761/eureka/
