--- a/cloud-configs/user-role-service.yaml
+++ b/cloud-configs/user-role-service.yaml
@@ -1,12 +1,12 @@
 server.port: 8082
-eureka.client.service-url.default-zone: http://localhost:8761/eureka/
+eureka.client.service-url.default-zone: http://service-discovery:8761/eureka/
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: root
+    url: jdbc:postgresql://postgres-db3:5434/db3
+    username: user3
+    password: password3
   jpa:
     hibernate:
       ddl-auto: create
 
-user.service.url: http://localhost:8080
+user.service.url: http://user-service:8080
