--- a/practice8/practice8-user-service/Dockerfile
+++ b/practice8/practice8-user-service/Dockerfile
@@ -3,7 +3,7 @@ FROM gradle:8.7-jdk21-alpine as build
 ADD . /project
 WORKDIR /project
 
-ARG JAR_FILE=app.jar
+ARG JAR_FILE=practice8-user-service.jar
 RUN gradle build -x test
 RUN ["sh", "-c", "jar -xf build/libs/${JAR_FILE}"]
 RUN jdeps --ignore-missing-deps -q \
@@ -23,7 +23,7 @@ RUN jlink \
 
 FROM alpine:latest
 
-ARG JAR_FILE=app.jar
+ARG JAR_FILE=practice8-user-service.jar
 RUN mkdir /java
 ENV JAVA_HOME /java
 ENV PATH $JAVA_HOME/bin:$PATH
@@ -32,4 +32,4 @@ COPY --from=build /myjre $JAVA_HOME
 COPY --from=build /project/build/libs/$JAR_FILE /libs/
 COPY --from=build /project/build/resources /resources/
 
-CMD ["java", "-jar", "libs/app.jar"]
+CMD ["java", "-jar", "libs/practice8-user-service.jar"]
