--- a/practice8/docker-compose.yaml
+++ b/practice8/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
   service-discovery:
     build:
       context: ./practice8-service-discovery
-    container_name: service_discovery
+    container_name: service-discovery
     ports:
       - "8761:8761"  # Expose on port 8761
     depends_on:
@@ -49,7 +49,7 @@ services:
   config-server:
     build:
       context: ./practice8-config-server
-    container_name: config_server
+    container_name: config-server
     ports:
       - "8888:8888"  # Expose on port 8888
     depends_on:
