--- a/practice8/docker-compose.yaml
+++ b/practice8/docker-compose.yaml
@@ -45,6 +45,8 @@ services:
       - postgres-db1
       - postgres-db2
       - postgres-db3
+    expose:
+      - "8761"
 
   config-server:
     build:
@@ -54,6 +56,8 @@ services:
       - "8888:8888"  # Expose on port 8888
     depends_on:
       - service-discovery
+    expose:
+      - "8888"
 
   user-service:
     build:
@@ -65,6 +69,8 @@ services:
       - user-fullname-service
       - user-role-service
     restart: always
+    expose:
+      - "8080"
 
   user-fullname-service:
     build:
@@ -75,6 +81,8 @@ services:
     depends_on:
       - config-server
     restart: always
+    expose:
+      - "8081"
 
   user-role-service:
     build:
@@ -85,6 +93,8 @@ services:
     depends_on:
       - config-server
     restart: always
+    expose:
+      - "8082"
 
   load-balancer:
     build:
@@ -95,6 +105,8 @@ services:
     depends_on:
       - user-service
     restart: always
+    expose:
+      - "9000"
 
   api-gateway:
     build:
@@ -105,6 +117,8 @@ services:
     depends_on:
       - load-balancer
     restart: always
+    expose:
+      - "80"
 
 volumes:
   db1_data:
