--- a/practice8/docker-compose.yaml
+++ b/practice8/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - db1_data:/var/lib/postgresql/data
+    networks: rksp-network
 
   postgres-db2:
     image: postgres:16-alpine3.19
@@ -22,6 +23,7 @@ services:
       - "5433:5432"  # Expose on a different port
     volumes:
       - db2_data:/var/lib/postgresql/data
+    networks: rksp-network
 
   postgres-db3:
     image: postgres:16-alpine3.19
@@ -34,6 +36,7 @@ services:
       - "5434:5432"  # Expose on a different port
     volumes:
       - db3_data:/var/lib/postgresql/data
+    networks: rksp-network
 
   service-discovery:
     build:
@@ -47,6 +50,7 @@ services:
       - postgres-db3
     expose:
       - "8761"
+    networks: rksp-network
 
   config-server:
     build:
@@ -58,6 +62,7 @@ services:
       - service-discovery
     expose:
       - "8888"
+    networks: rksp-network
 
   user-service:
     build:
@@ -71,6 +76,7 @@ services:
     restart: always
     expose:
       - "8080"
+    networks: rksp-network
 
   user-fullname-service:
     build:
@@ -83,6 +89,7 @@ services:
     restart: always
     expose:
       - "8081"
+    networks: rksp-network
 
   user-role-service:
     build:
@@ -95,6 +102,7 @@ services:
     restart: always
     expose:
       - "8082"
+    networks: rksp-network
 
   load-balancer:
     build:
@@ -107,6 +115,7 @@ services:
     restart: always
     expose:
       - "9000"
+    networks: rksp-network
 
   api-gateway:
     build:
@@ -119,8 +128,11 @@ services:
     restart: always
     expose:
       - "80"
+    networks: rksp-network
 
 volumes:
   db1_data:
   db2_data:
   db3_data:
+networks:
+  rksp-network:
