--- a/cloud-configs/user-fullname-service.yaml
+++ b/cloud-configs/user-fullname-service.yaml
@@ -1,5 +1,5 @@
 server.port: 8081
-eureka.client.service-url.default-zone: http://service-discovery:8761/eureka/
+eureka.client.service-url.defaultZone: http://service-discovery:8761/eureka/
 spring:
   datasource:
     url: jdbc:postgresql://postgres-db2:5433/db2
