--- a/practice8/practice8-config-server/src/main/resources/application.yaml
+++ b/practice8/practice8-config-server/src/main/resources/application.yaml
@@ -1,6 +1,5 @@
 spring.application.name: config-server
 server.port: 8888
-
 spring.cloud.config.server.git:
   search-paths:
     - cloud-configs
@@ -49,3 +48,7 @@ spring.cloud.config.server.git:
   ignore-local-ssh-settings: true
 
 eureka.client.service-url.defaultZone: http://service-discovery:8761/eureka/
+spring:
+  cloud:
+    config:
+      enabled: false
