--- a/practice8/docker-compose.yaml
+++ b/practice8/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       POSTGRES_PASSWORD: password1
     ports:
       - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - db1_data:/var/lib/postgresql/data
     networks:
@@ -22,6 +24,8 @@ services:
       POSTGRES_PASSWORD: password2
     ports:
       - "5433:5432"  # Expose on a different port
+    expose:
+      - "5432"
     volumes:
       - db2_data:/var/lib/postgresql/data
     networks:
@@ -36,6 +40,8 @@ services:
       POSTGRES_PASSWORD: password3
     ports:
       - "5434:5432"  # Expose on a different port
+    expose:
+      - "5432"
     volumes:
       - db3_data:/var/lib/postgresql/data
     networks:
