--- a/practice8/api-gateway-deployment.yaml
+++ b/practice8/api-gateway-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         io.kompose.service: api-gateway
     spec:
       containers:
-        - image: docker.io/library/practice8-api-gateway:latest
+        - image: localhost:5000/practice8-api-gateway
           name: api-gateway
           ports:
             - containerPort: 80
