--- a/practice8/load-balancer-deployment.yaml
+++ b/practice8/load-balancer-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         io.kompose.service: load-balancer
     spec:
       containers:
-        - image: docker.io/library/practice8-load-balancer:latest
+        - image: localhost:5000/practice8-load-balancer
           name: load-balancer
           ports:
             - containerPort: 9000
