--- a/practice8/practice8-api-gateway/Dockerfile
+++ b/practice8/practice8-api-gateway/Dockerfile
@@ -32,4 +32,4 @@ COPY --from=build /myjre $JAVA_HOME
 COPY --from=build /project/build/libs/$JAR_FILE /libs/
 COPY --from=build /project/build/resources /resources/
 
-CMD ["java", "-jar", "libs/practice8-api-gateway.jar"]
+CMD ["java", "-Djavax.net.debug=ssl:handshake", "-jar", "libs/practice8-api-gateway.jar"]
