--- a/practice8/user-service-deployment.yaml
+++ b/practice8/user-service-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         io.kompose.service: user-service
     spec:
       containers:
-        - image: docker.io/library/practice8-user-service:latest
+        - image: localhost:5000/practice8-user-service
           name: user-service
           ports:
             - containerPort: 8080
