--- a/practice8/ingress.yaml
+++ b/practice8/ingress.yaml
@@ -1,18 +1,18 @@
-apiVersion: networking.k8s.io/v1   
-kind: Ingress   
-metadata:   
-  name: appingress  
-  annotations:   
-    nginx.ingress.kubernetes.io/rewrite-target: /$1   
-spec:   
-  rules:   
-    - host: 195.58.34.143 
-      http:   
-        paths:   
-          - path: /
-            pathType: Prefix   
-            backend:   
-              service:   
-                name: practice8-api-gateway
-                port:   
-                  number: 80
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: example-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: "lexa.moscow"
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: api-gateway-service
+            port:
+              number: 80
